[workspace]
members = [ "bin/*", "connect", "positioning"]
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[workspace.dependencies]
esp-idf-svc = { version = "0.51.0", default-features = false, features = ["alloc", "binstart", "std", "native"] }
esp-idf-hal = { version = "0.45.1", default-features = false }
esp-idf-sys = { version = "0.36.1", default-features = false }
esp32-nimble = { version = "0.10.0" }
embedded-svc = { version = "0.28.1" }
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"

anyhow = { version = "1.0.95" }
log = { version = "0.4", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5.14"
argmin = {version = "0.10.0"}
argmin-math = { version = "0.4.0" }
