[package]
name = "connect"
version = "0.1.0"
edition = "2024"

[dependencies]
positioning = { path = "../positioning" }

anyhow = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }

esp-idf-svc = { workspace = true }
esp-idf-hal = { workspace = true }
esp-idf-sys = { workspace = true }
esp32-nimble = { workspace = true }
embedded-svc = { workspace = true }
ssd1306 = { workspace = true }
embedded-graphics = { workspace = true }
