[package]
name = "positioning-offline"
version = "0.1.0"
edition = "2024"

[dependencies]
"positioning" = { path = "../positioning" }
beacons = { path = "../beacons", features = ["HCI", "OCT", "SON"] }

log = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true }
