[package]
name = "positioning-offline"
version = "0.1.0"
edition = "2024"

[dependencies]
"positioning" = { path = "../positioning" }

log = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true }
eth-beacons-indoor = { version = "0.0.2", features = ["OCT", "SON", "HG"] }
