[package]
name = "positioning-online"
version = "0.1.0"
edition = "2024"

[dependencies]
"positioning" = {path = "../positioning"}

anyhow = { version = "1.0.95" }
log = { version = "0.4", default-features = false }
crossbeam-channel = "0.5.14"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0" }

esp-idf-svc = { workspace = true }
esp-idf-hal = { workspace = true }
esp-idf-sys = { workspace = true }
esp32-nimble = { workspace = true }
embedded-svc = { workspace = true }

